--- a/myApp/index.html
+++ b/myApp/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MultiData</title>
     <script type="module" src="./fire.js"></script>
@@ -14,10 +13,10 @@
           const token = await grecaptcha.enterprise.execute('6LeSs2IrAAAAAHfvoefVOgQfNhQmGPcS7RBrU3wQ', {action: 'LOGIN'});
         });
       }
-    </script>/
+    </script>
   </head>
   <body class="bg-gray-50m0  ">
-    <div id="root" class="fixed w-[100%] h-[100%] m-auto p-[0] bg-transparent "></div>
+    <div id="root" class="relative w-[100%] h-[100%] m-auto p-[0] bg-transparent "></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
