--- a/myApp/index.html
+++ b/myApp/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MultiData</title>
     <script type="module" src="./fire.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=stat_minus_1" />
     <script src="https://www.google.com/recaptcha/enterprise.js?render=6LeSs2IrAAAAAHfvoefVOgQfNhQmGPcS7RBrU3wQ"></script>
     <script>
       function onClick(e) {
